--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     }
   ],
   "devDependencies": {
+    "@types/react-test-renderer": "^17.0.1",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@rollup/plugin-image": "^2.1.1",
@@ -81,7 +82,7 @@
     "Camacaro"
   ],
   "dependencies": {
-    "@types/react-test-renderer": "^17.0.1"
+    
   },
   "jest": {
     "moduleNameMapper": {
